fix color button disabled and overflow departure cities and instagram link

--- a/src/components/_FormSearch.scss
+++ b/src/components/_FormSearch.scss
@@ -140,6 +140,10 @@
       &:focus {
         outline: none;
       }
+      &:disabled {
+        opacity: 1;
+        cursor: not-allowed;
+      }
     }
     .MuiCircularProgress-colorPrimary {
       color: white !important;
