--- a/src/components/_SelectedCities.scss
+++ b/src/components/_SelectedCities.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0 0.5rem;
 }
 .city-div {
